deployando gh-pages

--- a/GoC10AAPIsIIRepasamosMetodoGET.html
+++ b/GoC10AAPIsIIRepasamosMetodoGET.html
@@ -74,13 +74,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/980795565?h=8663618110&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
