--- a/GoC11AAPIsIIIRepasamosQueMetodosPUTyPATCH.html
+++ b/GoC11AAPIsIIIRepasamosQueMetodosPUTyPATCH.html
@@ -70,13 +70,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/982182583?h=a9cc83709a&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
@@ -113,13 +115,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/982184070?h=a81e3d68b3&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
