--- a/GoC13AMiddlewareAutenticacionDocumentacionDocumentacion.html
+++ b/GoC13AMiddlewareAutenticacionDocumentacionDocumentacion.html
@@ -78,13 +78,15 @@
           </div>
         </div>
         <div class="block-box">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/983222482?h=011d31d2a0&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
