--- a/GoC17AGoArquitecturaSpringCloudIResumen.html
+++ b/GoC17AGoArquitecturaSpringCloudIResumen.html
@@ -51,13 +51,15 @@
           </div>
         </div>
         <div class="block-box">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/983387293?h=caf56c04d9&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
