--- a/GoC18AGoArquitecturaSpringCloudIIIntegrandoKeycloakSpringCloud.html
+++ b/GoC18AGoArquitecturaSpringCloudIIIntegrandoKeycloakSpringCloud.html
@@ -80,13 +80,15 @@
           </div>
         </div>
         <div class="block-box">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/983439941?h=4f24957a13&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
