--- a/GoC1AIntroducciónalasintaxisGoConclusion.html
+++ b/GoC1AIntroducciónalasintaxisGoConclusion.html
@@ -76,12 +76,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974445649?h=769e5c9423&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
