--- a/GoC2AFuncionesDeclaracionInvocacion.html
+++ b/GoC2AFuncionesDeclaracionInvocacion.html
@@ -79,12 +79,13 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div               data-testid="VIMEO-player"
+          class="video-block__content video-block__content_square"
+          data-vimeo-initialized="true">
             <iframe
               src="https://player.vimeo.com/video/974522097?h=7921f9051f&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
