--- a/GoC4AComposicionPunterosInterfacesInterfaces.html
+++ b/GoC4AComposicionPunterosInterfacesInterfaces.html
@@ -51,12 +51,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://docs.google.com/presentation/d/1z5A2p8U1wsYIkA4W7jhWj20b-q1jliiUA3a3gN_Vebc/preview?usp=sharing"
               allowfullscreen=""
               title="BlockIframe"
-              class="slide-block__content"
             ></iframe>
           </div>
         </div>
