--- a/GoC5AManejoErroresInterrupcionesConclusion.html
+++ b/GoC5AManejoErroresInterrupcionesConclusion.html
@@ -90,12 +90,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974741096?h=cc466c2623&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
