--- a/GoC7AConcurrenciaParalelismoCanales1.html
+++ b/GoC7AConcurrenciaParalelismoCanales1.html
@@ -65,22 +65,24 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div               data-testid="VIMEO-player"
+          class="video-block__content video-block__content_square"
+          data-vimeo-initialized="true">
             <iframe
               src="https://player.vimeo.com/video/974764129?h=75543e8757&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div               data-testid="VIMEO-player"
+          class="video-block__content video-block__content_square"
+          data-vimeo-initialized="true">
             <iframe
               src="https://player.vimeo.com/video/974765667?h=b3c8b8707e&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
