--- a/GoC9AAPIsIRepasamosqueesunaAPI.html
+++ b/GoC9AAPIsIRepasamosqueesunaAPI.html
@@ -82,13 +82,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/980770927?h=ab9ca80673&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
@@ -109,13 +111,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/980773013?h=32b47ae98e&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
