--- a/GoC10AAPIsIIWebContext.html
+++ b/GoC10AAPIsIIWebContext.html
@@ -81,13 +81,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/980797876?h=dbf266e64a&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
