--- a/GoC11AAPIsIIIRepasamosQueMetodoDELETE.html
+++ b/GoC11AAPIsIIIRepasamosQueMetodoDELETE.html
@@ -71,13 +71,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/982187071?h=f1d3432f86&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
