--- a/GoC11AAPIsIIIRepasamosQueMetodoPOST.html
+++ b/GoC11AAPIsIIIRepasamosQueMetodoPOST.html
@@ -53,13 +53,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/982179958?h=4eb4424d62&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
