--- a/GoC13AMiddlewareAutenticacionDocumentacionConclusion.html
+++ b/GoC13AMiddlewareAutenticacionDocumentacionConclusion.html
@@ -88,13 +88,15 @@
           </div>
         </div>
         <div class="block-box">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/983226997?h=92532b9181&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
