--- a/GoC14ACapaAccesoDatosCapaRepository.html
+++ b/GoC14ACapaAccesoDatosCapaRepository.html
@@ -144,13 +144,15 @@
           </div>
         </div>
         <div class="block-box">
-          <div>
-            <div class=""></div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/983259566?h=a0e22dde30&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
