--- a/GoC1AIntroducciónalasintaxisGoIntroduccionMateria.html
+++ b/GoC1AIntroducciónalasintaxisGoIntroduccionMateria.html
@@ -69,12 +69,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="hector video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974424727?h=1dbfeb69e8&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
