--- a/GoC1AIntroducciónalasintaxisGoOperadores.html
+++ b/GoC1AIntroducciónalasintaxisGoOperadores.html
@@ -66,12 +66,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974439856?h=75250331bf&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
