--- a/GoC1AIntroducciónalasintaxisGoOrganizacionCodigo.html
+++ b/GoC1AIntroducciónalasintaxisGoOrganizacionCodigo.html
@@ -71,12 +71,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="hector video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974429080?h=031c066dcd&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
