--- a/GoC1AIntroducciónalasintaxisGoTiposDatosGo.html
+++ b/GoC1AIntroducciónalasintaxisGoTiposDatosGo.html
@@ -68,12 +68,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974434886?h=be7983bea2&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
