--- a/GoC3AEstructurasEstructurasGo.html
+++ b/GoC3AEstructurasEstructurasGo.html
@@ -69,12 +69,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974702332?h=19abb2f034&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
