--- a/GoC5AManejoErroresInterrupcionesInterrupcionesenGo.html
+++ b/GoC5AManejoErroresInterrupcionesInterrupcionesenGo.html
@@ -69,12 +69,15 @@
           </div>
         </div>
         <div class="block-box x">
-          <div>
+          <div
+            data-testid="VIMEO-player"
+            class="video-block__content video-block__content_square"
+            data-vimeo-initialized="true"
+          >
             <iframe
               src="https://player.vimeo.com/video/974739174?h=df1640aba4&amp"
               allowfullscreen=""
               title="BlockIframe"
-              class="video-block__content"
             ></iframe>
           </div>
         </div>
