deployando gh-pages

--- a/GoC5AManejoErroresInterrupcionesErroresenGo.html
+++ b/GoC5AManejoErroresInterrupcionesErroresenGo.html
@@ -68,7 +68,7 @@
         <div class="block-box x">
           <div
             data-testid="VIMEO-player"
-            class="hector video-block__content video-block__content_square"
+            class="video-block__content video-block__content_square"
             data-vimeo-initialized="true"
           >
             <iframe
